# django-simplecv

./: MANFEST.in  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py
simplecv/: __init__.py  admin.py  apps.py  models.py  urls.py  utils.py  views.py
simplecv/export/: __init__.py  todocx.py  topdf.py
simplecv/management/commands/: cvexport.py
simplecv/migrations/: 0001_initial.py
simplecv/static/simplecv/: simplecv.css  simplecv.js
simplecv/templates/simplecv/: docx.html  simplecv.html  simplecv.txt
simplecv/templatetags/: simplecv_tags.py
src/simplecv/: __init__.py  admin.py  models.py  urls.py  utils.py  views.py
src/simplecv/export/: __init__.py  todocx.py  topdf.py
src/simplecv/management/commands/: cvexport.py
src/simplecv/migrations/: 0002_extended_models.py
src/simplecv/static/simplecv/: simplecv.css
src/simplecv/templates/simplecv/: docx.html  simplecv.html  simplecv.txt
src/simplecv/templatetags/: simplecv_tags.py
